# super-potato

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.rst  pyproject.toml
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 9241220a49dd_unique_on_book_author_and_title.py  95dbaaf49269_create_authors_and_books_tables.py
app/: database.py  main.py  repository.py  services.py
app/adapters/: __init__.py  database.py  db_repository.py  mem_repository.py
app/adapters/api/: restapi_fastapi.py
app/adapters/data_storage/: database.py  db_repository.py  mem_repository.py
app/adapters/tests/: test_fastapi_e2e.py  test_repository.py
app/domain/: services.py
app/domain/interfaces/: __init__.py  repository.py
app/domain/services/: __init__.py  author.py  base.py  book.py
app/domain/tests/: test_services.py
app/domain/tests/test_services/: conftest.py  test_author_services.py  test_book_services.py
tests/: test_app_e2e.py  test_db_repository.py  test_repository.py
